crates/rune-config/tests/snapshots/config_errors__a_failed_resolution_names_the_chain_that_reached_it.snap
---
source: crates/rune-config/tests/config_errors.rs
description: a specifier that resolves to nothing
expression: failure(&dir)
---
cannot find `./nowhere` imported from scripts/inner.ts

tried:
  scripts/nowhere
  scripts/nowhere.ts
  scripts/nowhere/index.ts

imports followed to get here:
  rune.config.ts
  scripts/helpers.ts
  scripts/inner.ts
