crates/rune-config/tests/snapshots/config_errors__a_missing_export_names_the_file_that_wrote_it.snap
---
source: crates/rune-config/tests/config_errors.rs
description: an export the supplied module does not have
expression: failure(&dir)
---
scripts/helpers.ts imports `nope` from `@gio-labs/rune`, which does not export it

imports followed to get here:
  rune.config.ts
  scripts/helpers.ts
