crates/rune-config/tests/snapshots/config_errors__a_syntax_error_names_the_line_and_shows_it.snap
---
source: crates/rune-config/tests/config_errors.rs
description: a stray brace in an imported helper
expression: failure(&dir)
---
scripts/helpers.ts:3:24
  Unexpected token

  3 | export const broken = {;
