crates/rune-config/tests/snapshots/config_errors__an_engine_error_is_wrapped_in_runes_own_sentence.snap
---
source: crates/rune-config/tests/config_errors.rs
description: an error the engine raised
expression: failure(&dir)
---
rune.config.ts failed while it was being evaluated as a rune config

cannot read property 'f' of undefined
